--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "barryvdh/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
+        "spatie/laravel-cors": "^1.6",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
